# wanfa-Agent

./: .env.example  .gitignore  README.md  package.json
docs/: DEPRECATED_ENTRYPOINTS.md  ENVIRONMENT.md  LEGACY_INVENTORY.md  PHASE_10_ACCEPTANCE_REPORT.md  PHASE_11_ACCEPTANCE_REPORT.md  PHASE_12_ACCEPTANCE_REPORT.md  PHASE_13_HARDENING_REPORT.md  (+12 more)
legacy/sou/backend/: Dockerfile  alembic.ini  pyproject.toml
legacy/sou/backend/alembic/: env.py
legacy/sou/backend/alembic/versions/: 0001_initial.py
legacy/sou/backend/app/: __init__.py  main.py
legacy/sou/backend/app/api/: routes.py
legacy/sou/backend/app/core/: config.py  logging.py  security.py
legacy/sou/backend/app/db/: session.py
legacy/sou/backend/app/models/: __init__.py  all_models.py
legacy/sou/backend/app/schemas/: common.py  compliance.py  dashboard.py  event.py  intelligence.py  job.py  product_review.py  report.py  setting.py  source.py  watchlist.py
legacy/sou/backend/app/services/: clustering.py  collector_runner.py  compliance.py  dashboard.py  extraction.py  intelligence.py  job_runner.py  llm_gateway.py  normalization.py  product_reviews.py  query_planner.py  report_generator.py  scoring.py  settings.py  vector_store.py  verification.py
legacy/sou/backend/app/services/collectors/: __init__.py  amazon.py  arxiv.py  base.py  custom.py  github.py  http_client.py  markets.py  product.py  registry.py  rss.py  search.py
legacy/sou/backend/scripts/: seed.py
legacy/sou/backend/tests/: conftest.py  test_api.py  test_collectors.py  test_extraction_scoring_report.py  test_normalization.py
(+1385 files in other folders)
