[project]
name = "intel-agent-backend"
version = "0.1.0"
description = "AI intelligence collection and analysis agent backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "feedparser>=6.0.11",
  "httpx>=0.27.2",
  "loguru>=0.7.2",
  "openai>=1.51.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.9",
  "qdrant-client>=1.11.1",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.34",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "trafilatura>=1.12.2",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
